--- a/frontend/src/app/pages/families/deletion-dialog/deletion-dialog.component.html
+++ b/frontend/src/app/pages/families/deletion-dialog/deletion-dialog.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content class="mat-typography">
   <h3>Esta ação não pode ser desfeita.</h3>
   <h3>
-    Deseja excluir esta família, inclusive seus membros e crianças cadastradas?
+    {{ data.text }}
   </h3>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
