--- a/frontend/src/app/pages/login/login.component.scss
+++ b/frontend/src/app/pages/login/login.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
+  margin-top: 32px;
 
   .login-card {
     .login-form {
@@ -17,10 +18,6 @@
       &.margin-bottom {
         margin-bottom: 4px;
       }
-    }
-
-    .login-button {
-      background-color: #1a73e8;
     }
   }
 }
