feature: adding children report and fixing family form bugs

--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
       </mat-form-field>
     </div>
 
-    <!-- <button
+    <button
       class="export-button"
       mat-raised-button
       color="primary"
@@ -21,8 +21,8 @@
       (click)="getReport()"
     >
       <mat-icon>file_download</mat-icon>
-      Obter planilha
-    </button> -->
+      Exportar
+    </button>
   </div>
 
   <div class="table-pagination-container mat-elevation-z8">
@@ -80,9 +80,5 @@
         </tr>
       </mat-table>
     </div>
-    <mat-paginator
-      [pageSizeOptions]="[10, 25, 50, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
   </div>
 </div>
