--- a/frontend/src/app/pages/families/create/create-family.component.html
+++ b/frontend/src/app/pages/families/create/create-family.component.html
@@ -226,7 +226,7 @@
         </form>
 
         <div class="god-parents-table_container mat-elevation-z8">
-          <mat-table [dataSource]="children" #childrenTable="matTable">
+          <mat-table [dataSource]="children" #childrenTable="matTable" class="children_table">
             <!-- Genre -->
             <ng-container matColumnDef="genre">
               <mat-header-cell *matHeaderCellDef>Sexo</mat-header-cell>
