--- a/frontend/src/app/pages/families/create/create-family.component.scss
+++ b/frontend/src/app/pages/families/create/create-family.component.scss
@@ -47,3 +47,10 @@ td {
 .mat-cell:nth-child(3) {
   max-width: 80px;
 }
+
+.children_table {
+  .mat-header-cell:nth-child(6),
+  .mat-cell:nth-child(6) {
+    max-width: 80px;
+  }
+}
