--- a/frontend/src/app/pages/manage-accounts/list-accounts/list-accounts.component.html
+++ b/frontend/src/app/pages/manage-accounts/list-accounts/list-accounts.component.html
@@ -81,7 +81,7 @@
       </mat-table>
     </div>
     <mat-paginator
-      [pageSizeOptions]="[10, 25, 50, 100]"
+      [pageSizeOptions]="[50, 100]"
       aria-label="Select page of users"
     ></mat-paginator>
   </div>
