--- a/frontend/src/app/pages/families/list-families/list-families.component.scss
+++ b/frontend/src/app/pages/families/list-families/list-families.component.scss
@@ -12,9 +12,12 @@ table {
   width: 100%;
 }
 
-td,
-th {
-  width: 25%;
+.mat-header-cell:nth-child(1),
+.mat-cell:nth-child(1),
+.mat-header-cell:nth-child(4),
+.mat-cell:nth-child(4)
+{
+  max-width: 80px;
 }
 
 .mat-row .mat-cell {
