feature: new snackbar component

--- a/frontend/src/app/components/snackbar/snackbar.component.html
+++ b/frontend/src/app/components/snackbar/snackbar.component.html
@@ -1,12 +1,11 @@
 <mat-card
-  *ngIf="systemNotification.ShowNotification"
   class="example-card"
   [ngClass]="getCssClassByNotificationType"
 >
   <mat-card-content>
     <div class="card-content">
       <mat-icon>{{ notificationText }}</mat-icon>
-      <p>{{ systemNotification.Message }}</p>
+      <p>{{ data.Message }}</p>
     </div>
   </mat-card-content>
   <mat-divider inset></mat-divider>
