--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.jcc_snackbar_panel {
+  background-color: transparent;
+  box-shadow: none;
+}
